--- a/MyPraticeApplication/Views/Shared/_Layout.cshtml
+++ b/MyPraticeApplication/Views/Shared/_Layout.cshtml
@@ -21,9 +21,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                  
+                   <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 					<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+					 <li>@Html.ActionLink("Home", "Index", "Home")</li>
+					  <li>@Html.ActionLink("Home", "Index", "Home")</li>
+					   <li>@Html.ActionLink("Home", "Index", "Home")</li>
 					
                 </ul>
             </div>
